not responsive, but at least it works and some bugs are fixed :D

--- a/sass/_landing.sass
+++ b/sass/_landing.sass
@@ -85,13 +85,19 @@ body
         min-height: 365px
         text-align: center
         margin-bottom: 0
-
+        display: flow-root
+        i
+          display: inline-block
+          transition: $transition
+        &:hover
+          i
+            transform: scale(1.3)
         .adv-icon
           font-size: 80px
           margin-bottom: 30px
           transition: $transition
-          &:hover
-            transform: scale(1.3)
+          //&:hover
+            //transform: scale(1.3)
         .adv-header
           font-size: 20px
           font-weight: bold
